[project]
name = "no-blink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "gunicorn>=23.0.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "polars>=1.12.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "uvicorn>=0.32.1",
]
